--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,13 +27,19 @@ jobs:
       matrix:
         include:
           - build_variant: "mt7620"
-            targets: "PSG1218"
+            targets: "PSG1208 PSG1218 NEWIFI-MINI MI-MINI MI-3 OYE-001 5K-W20"
+          - build_variant: "mt7628"
+            targets: "HC5861B MI-NANO MZ-R13 MZ-R13P 360P2 HC5761A HC5661A"
+          - build_variant: "mt7621"
+            targets: "K2P_nano K2P DIR-878 RM2100 CR660x"
+          - build_variant: "mt7621-usb"
+            targets: "XY-C1 JCG-836PRO JCG-AC860M JCG-Y2 DIR-882 A3004NS MSG1500 WR1200JS MI-R3G NEWIFI3 B70"
     steps:
       - uses: actions/checkout@v2
       - name: Prepare environment
         run: |
           sudo apt update
-          sudo apt install libtool-bin gperf python-docutils autopoint gettext
+          sudo apt install libtool-bin gperf python3-docutils autopoint gettext
       - name: Run shellcheck
         run: sh ./trunk/tools/shellcheck.sh
       - name: Prepare toolchain
